# sparkle-input

./: CMakeLists.txt  README.md
cmake/: SparkleInputConfig.cmake.in
examples/: CMakeLists.txt  DirectKeyboardAccessExample.cpp  MinimalCompleteExample.cpp  SDLInitialization.h  ScanInputExample.cpp  SimpleGamepadExample.cpp  SimpleKeyboardExample.cpp  TutorialExample01.cpp
include/Sparkle/: Input.h  InputAction.h  InputController.h  InputEvent.h  InputMap.h  PlayerInputController.h
include/Sparkle/Controller/: GamepadController.h  KeyboardController.h
src/Sparkle/: GamepadController.cpp  GamepadController.h  Input.cpp  Input.h  InputAction.h  InputController.cpp  InputController.h  InputEvent.h  InputMap.h  KeyboardController.cpp  KeyboardController.h  PlayerInputController.cpp  PlayerInputController.h
src/Sparkle/Controller/: GamepadController.cpp  KeyboardController.cpp
src/Sparkle/Controller/InputProcess/: GamepadInputProcess.cpp  GamepadInputProcess.h
src/Sparkle/input_process/: GamepadInputProcess.cpp  GamepadInputProcess.h  InputProcess.h  KeyboardInputProcess.cpp  KeyboardInputProcess.h
